--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav {
 .text-left {
 
     flex-basis: 30em;
-    height: ;
+    
     
 
 }
@@ -222,7 +222,7 @@ h1 {
     color: white;
     background: #3882F6 ;
     border-radius: 0.7em;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
 }
@@ -232,12 +232,14 @@ h1 {
     text-align: left;
     margin: 0;
     padding: 0;
+    font-weight: bolder;
+    font-size: 18px;
 
 }
 
 .p2 {
 
-    font-size: 16px;
+    font-size: 14px;
     text-align: left;
     margin: 0;
     padding: 0;
@@ -248,6 +250,16 @@ h1 {
     display: inline-block;
     border: 1px solid white;
     border-radius: 0.5em;
+    height: 28px;
+    margin: 0;
+
+}
+
+.con-right-box {
+    display: flex;
+    align-items:  center;
+
+
 
 }
 
